Closed
Bug 633826
Opened 15 years ago
Closed 15 years ago
YouTube (Flash) videos not drawing properly
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(blocking2.0 final+)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: jaas, Assigned: jaas)
References
Details
(Whiteboard: [hardblocker])
YouTube (Flash) videos are not drawing properly in today's nightly build. New frames are drawn only sporadically while audio is fine.
This might be a regression from bug 591687.
I am seeing this in the console but I'm not sure it is the problem.
kernel IOSurface: buffer allocation size is zero
I'm seeing this too. I've noticed if you cause something else on the page to change like running your mouse back and forth along the related video links to make them highlight then the video plays fine, but as soon as you stop then the video stops updating as well.
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12pre) Gecko/20110213 Firefox/4.0b12pre
This also doesn't seem to happen everywhere. So far what I've tested:
Flash Works Normally:
Crunchyroll.com
Facebook Video
Metacafe
Colbertnation.com Video
Vimeo
Nationalgeographic.com Video
Flash Doesn't Refresh:
YouTube
Hulu
Physicsgames.net
Vimeo Embedded Video
This would probably only happen with videos for which Flash uses Core Animation.
This bug doesn't appear with an i386 browser process. I tried a debug i386-only build based on source from an hour ago and I launched the latest nightly build in i386 mode - neither shows this bug.
I think this bug only shows up when running Flash cross-architecture - 32-bit Flash in a 64-bit browser.
Do we know that IOSurface will work at all between two processes of different architectures?
Comment 7•15 years ago
|
||
I'm seeing this on my macbook pro today. Let me know if you need any details.
Comment 9•15 years ago
|
||
I have a patch on the try server that will disable the changes from bug 591687 until this regression is addressed, just waiting for the results.
Comment 10•15 years ago
|
||
As recommended by Josh:
Disabled OSX Plugin Layer until this issue is resolved.
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/93cd6c60e16b
Updated•15 years ago
|
blocking2.0: ? → final+
Whiteboard: [hardblocker]
Comment 12•15 years ago
|
||
Is there a follow-up bug filed on turning it back on? Is that required for Firefox 4?
Comment 13•15 years ago
|
||
Bug 591687 has been reopened.
Comment 14•15 years ago
|
||
Facing the bug again in Firefox 4 Beta 12
Comment 15•15 years ago
|
||
Drawing problems also on fancast.com while scrolling
Comment 16•15 years ago
|
||
Problem solved when reinstalled flash to 10.2.152.33
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•