Disable OSX Plugin Layer due to regression b=633826 r+a=josh,bustage